echo/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: inanimate/echo-server
          ports:
            - name: web
              containerPort: 8080
