echo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: echo
