echo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  tls:
  # - hosts:
  #   - echo.local.antoniocaccamo.work
  #   secretName: self-signed-tls
  rules:
    - host: echo.local.antoniocaccamo.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  name: http
